--- a/스파르타코딩클럽/SPARTA_REACT/specialty_w4/package.json
+++ b/스파르타코딩클럽/SPARTA_REACT/specialty_w4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bucket_list",
+  "name": "sparta-react-basic",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,17 +9,20 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^14.0.1",
+    "concurrently": "^7.0.0",
+    "express": "^4.17.3",
+    "firebase": "^9.6.10",
     "firebase-tools": "^10.5.0",
     "global": "^4.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.0"
+    "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
