--- a/스파르타코딩클럽/SPARTA_REACT/package.json
+++ b/스파르타코딩클럽/SPARTA_REACT/package.json
@@ -6,6 +6,7 @@
     "@mui/material": "^5.5.3",
     "firebase": "^9.6.10",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
   }
