--- a/스파르타코딩클럽/SPARTA_REACT/week5_homework/package.json
+++ b/스파르타코딩클럽/SPARTA_REACT/week5_homework/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "week5-homework",
+  "name": "week5_homework",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "firebase": "^9.6.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
